css update - error message spacing fix

--- a/web/src/main/webapp/krad/css/global/base.css
+++ b/web/src/main/webapp/krad/css/global/base.css
@@ -311,9 +311,9 @@ li label.kr-error {
 	display: block;
 }
 
-.boxLayoutVerticalItem{
-	padding-bottom: 20px;
-	display: block;
+boxLayoutVerticalItem {
+    display: block;
+    margin-bottom: 20px;
 }
 tr.kr-addLine {
     background-color: #F2F2F2 !important;
